--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@tanstack/react-table": "^8.20.6",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cra-template-typescript": "1.2.0",
     "date-fns": "^3.6.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.469.0",
+    "npm": "^11.0.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
@@ -47,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "tailwindcss": "^3.4.17",
