--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# NODE_ENV=development
-# REACT_APP_SERVER_URL=http://localhost:5002/api
+NODE_ENV=development
+REACT_APP_SERVER_URL=http://localhost:5002/api
